--- a/src/app/modulos/tema/anadir-tema/anadir-tema.component.html
+++ b/src/app/modulos/tema/anadir-tema/anadir-tema.component.html
@@ -2,10 +2,10 @@
   <div class="row justify-content-center">
     <div class="col-lg-8">
       <!-- Título -->
-      <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1 class="display-4 text-primary border-bottom pb-2">Crear Tema</h1>
-      </div>
 
+      <div class="d-flex justify-content-between align-items-center mb-4">
+        <h1 class="display-4 text-primary border-bottom pb-2">{{crearEditar}} Tema</h1>
+      </div>
       <!-- Formulario -->
       <form [formGroup]="temaForm" (ngSubmit)="metodoActualizarCrear()">
         <div class="mb-3">
