--- a/src/app/modulos/artefactos/anadir-artefactos/anadir-artefactos.component.html
+++ b/src/app/modulos/artefactos/anadir-artefactos/anadir-artefactos.component.html
@@ -3,7 +3,7 @@
   <div class="row justify-content-center">
     <div class="col-lg-6">
       <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1 class="display-4 text-primary border-bottom pb-2">Crear Artefacto</h1>
+        <h1 class="display-4 text-primary border-bottom pb-2">{{crearEditar}} Artefacto</h1>
       </div>
       <form [formGroup]="artefactoForm" (ngSubmit)="metodoActualizarCrear()" class="mt-4">
         <div class="mb-3">
