--- a/src/app/modulos/logros/anadir-logros/anadir-logros.component.html
+++ b/src/app/modulos/logros/anadir-logros/anadir-logros.component.html
@@ -1,6 +1,9 @@
 <div class="container mt-4">
     <div class="row justify-content-center">
       <div class="col-lg-6">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+          <h1 class="display-4 text-primary border-bottom pb-2">{{crearEditar}} Logro</h1>
+        </div>
         <form [formGroup]="logroForm" (ngSubmit)="metodoActualizarCrear()"  enctype="multipart/form-data" class="mt-4">
           <div class="mb-3">
             <label for="nombre" class="form-label">Nombre del logro</label>
