--- a/src/app/modulos/retos/anadir-retos/anadir-retos.component.html
+++ b/src/app/modulos/retos/anadir-retos/anadir-retos.component.html
@@ -2,6 +2,9 @@
   <div class="container mt-4">
     <div class="row justify-content-center">
       <div class="col-lg-6">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+          <h1 class="display-4 text-primary border-bottom pb-2">{{crearEditar}} Reto</h1>
+        </div>
         <form [formGroup]="retoForm" (ngSubmit)="metodoActualizarCrear()" class="mt-4">
           <div class="mb-3">
             <label for="nombre" class="form-label">Nombre del reto</label>
@@ -27,10 +30,7 @@
             <label for="fechaFin" class="form-label">Fecha de Fin</label>
             <input type="date" class="form-control" id="fechaFin" formControlName="fechaFin" placeholder="Selecciona la fecha de fin">
           </div>
-          <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="automatico" formControlName="automatico">
-            <label class="form-check-label" for="automatico">Automatico</label>
-          </div>
+
           <div class="mb-3">
             <label for="logro" class="form-label">Logro</label>
             <select class="form-control" id="logro" formControlName="logro">
