--- a/src/app/modulos/retos/lista-estados-alumnos/lista-estados.component.html
+++ b/src/app/modulos/retos/lista-estados-alumnos/lista-estados.component.html
@@ -1,4 +1,4 @@
-<table class="table table-striped">
+<table class="table table-striped" *ngIf="retosResultado.length != 0">
     <thead>
         <tr>
             <th>Nombre</th>
@@ -21,4 +21,9 @@
 
         </tr>
     </tbody>
+
 </table>
+
+<div *ngIf="retosResultado.length === 0" class="alert alert-warning text-center" role="alert">
+    No hay elementos disponibles para mostrar.
+  </div>
