--- a/src/app/modulos/web-main/menu/menu.component.html
+++ b/src/app/modulos/web-main/menu/menu.component.html
@@ -93,6 +93,7 @@
               <a class="dropdown-item" routerLink="/register">¿Eres nuevo en la web?</a>
             </li>
             <ng-template #cerrar>
+              <a class="dropdown-item" (click)="openDialog()">Mi perfil</a>
               <a class="dropdown-item" (click)="cerrarSesion()">Cerrar Sesión</a>
             </ng-template>
           </ul>
