--- a/src/app/modulos/preguntas/reporte-preguntas/reporte-preguntas.component.html
+++ b/src/app/modulos/preguntas/reporte-preguntas/reporte-preguntas.component.html
@@ -1,44 +1,25 @@
-<div class="container mt-4">
-
-
-
-    <div class="row">
-      <div class="col">
-        <table class="table table-striped"  *ngIf="reportePreguntas.length > 0; else noData">  
-          <thead>
-            <tr>
-                            
-              <th>Nombre</th>
-              <th>Estado</th>
-              <th>Motivo</th>
-
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let reportePregunta of reportePreguntas">
-              
-              <td>{{reportePregunta.texto}}</td>
-              <td>{{reportePregunta.motivo}}</td>
-              <td>{{reportePregunta.estado}}</td>
-
-
-              <!-- etc., agrega más celdas si necesitas -->
-            </tr>
-          </tbody>
-        </table>
-        <ng-template #noData>
-
-        <div class="alert alert-info text-center d-flex flex-column justify-content-center align-items-center" role="alert"
-        style="height: 200px;">
-          <h4 class="alert-heading">Información</h4>
-          <p>No hay registros disponibles.</p>
-        </div>
-    </ng-template>
-        
-        <div class="mt-3">
-            <button class="btn btn-primary" [routerLink]="['/asignaturas', idAsignatura]">Volver</button>
+<div class="container my-5">
+  <div class="card shadow-lg">
+    <div class="card-header bg-primary text-white text-center">
+      <h2>Reportes de Preguntas</h2>
+    </div>
+    <div class="card-body">
+      <div *ngFor="let reporte of reportePreguntas" class="mb-4">
+        <div class="card mb-3">
+          <div class="card-body">
+            <h4 class="card-title">Pregunta: {{reporte.pregunta?.enunciado}}</h4>
+            <p><strong>Alumno:</strong> {{reporte.alumno?.usuario?.nombre}}</p>
+            <ul class="list-group list-group-flush mb-3">
+              <li class="list-group-item" *ngFor="let respuesta of reporte.pregunta?.respuestas">
+                {{respuesta.texto}}
+              </li>
+            </ul>
+            <p><strong>Respuesta Correcta:</strong> {{getRespuestaCorrecta(reporte?.pregunta?.respuestas)}}</p>
+            <p><strong>Estado:</strong> {{reporte.estado}}</p>
+            <p><strong>Motivo:</strong> {{reporte.motivo}}</p>
           </div>
-
+        </div>
       </div>
     </div>
   </div>
+</div>
