--- a/src/app/modulos/preguntas/testList.component/test-list.component.html
+++ b/src/app/modulos/preguntas/testList.component/test-list.component.html
@@ -8,18 +8,20 @@
       <table class="table table-striped table-hover">
         <thead class="thead-dark">
           <tr>
-            <th>ID</th>
             <th>Nombre</th>
             <th>Descripción</th>
+            <th>Nº preguntas</th>
+            <th>Temas</th>
             <th>Acción</th>
             <!-- Añade más columnas según lo necesites -->
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let test of tests">
-            <td>{{ test.id }}</td>
             <td>{{ test.nombre }}</td>
             <td>{{ test.descripcion }}</td>
+            <td>{{ test.numeroPreguntas }}</td>
+            <td>{{ test.listaTemas }}</td>
             <td>
               <button class="btn btn-primary btn-sm" (click)="realizarTest(test.id)">Realizar Test</button>
             </td>
@@ -29,17 +31,17 @@
       </table>
 
 
-      <div class="mt-3">
+      <div class="d-flex gap-2 mt-3">
         <button class="btn btn-secondary" [routerLink]="['/asignaturas', idAsignatura]">Volver</button>
+        <button class="btn btn-success" *ngIf="esProfesor()" [routerLink]="['/asignaturas', idAsignatura,'test','añadir']">Crear nuevo test</button>
+
       </div>
 
       <div class="mt-3">
         <button class="btn btn-primary" [routerLink]="['/asignaturas', idAsignatura, 'test', 'reportePregunta']">Ver
-          reportes de la asignatura</button>
+          Reportes de preguntas</button>
       </div>
-      <div class="mt-3" *ngIf="esProfesor()">
-        <button class="btn btn-success" [routerLink]="['/asignaturas', idAsignatura,'test','añadir']">Crear nuevo test</button>
-      </div>
+
 
     </div>
   </div>
