--- a/src/app/modulos/preguntas/testPregunta.component/test-pregunta.component.html
+++ b/src/app/modulos/preguntas/testPregunta.component/test-pregunta.component.html
@@ -1,12 +1,24 @@
-<div *ngIf="pregunta">
-    <h2>{{ pregunta.enunciado }}</h2>
-    
-    <form>
-      <div *ngFor="let respuesta of pregunta.respuestas">
-        <input type="radio" [(ngModel)]="selectedRespuesta" name="respuesta" [value]="respuesta.id"> {{respuesta.texto}}
-      </div>
-    </form>
-    
-    <button (click)="continuar()">Continuar</button>
-  </div>
+<div class="container mt-4">
+  <h1 class="display-4 text-primary">Realizar Test</h1>
   
+  <div *ngIf="pregunta" class="mt-4">
+    <div class="card">
+      <div class="card-header">
+        <h2 class="h4">{{ pregunta.enunciado }}</h2>
+      </div>
+      <div class="card-body">
+        <form>
+          <div class="form-check" *ngFor="let respuesta of pregunta.respuestas">
+            <input class="form-check-input" type="radio" [(ngModel)]="selectedRespuesta" name="respuesta" [value]="respuesta.id" id="respuesta{{respuesta.id}}">
+            <label class="form-check-label" [for]="'respuesta' + respuesta.id">
+              {{ respuesta.texto }}
+            </label>
+          </div>
+        </form>
+      </div>
+      <div class="card-footer text-end">
+        <button class="btn btn-primary" (click)="continuar()">Continuar</button>
+      </div>
+    </div>
+  </div>
+</div>
