--- a/src/app/modulos/tema/crear-pregunta/crear-pregunta.component.html
+++ b/src/app/modulos/tema/crear-pregunta/crear-pregunta.component.html
@@ -35,5 +35,5 @@
       </small>
     </div>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Crear pregunta</button>
 </form>
